Corrected part d of question 4

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -129,9 +129,8 @@
     "$f(n) = \\Omega(g(n))$ because:\n",
     "\n",
     "* $\\frac{f(n)}{g(n)} = \\frac{e^{n}}{2^{n}}$\n",
-    "* $\\frac{e^{n}}{2^{n}} = \\frac{e^{n}}{n * ln(2)}$ (L'hopital's Rule)\n",
-    "* $\\frac{e^{n}}{n * ln(2)} = \\frac{e^{n}}{ln(2)}$ (L'hopital's Rule)\n",
-    "* $\\frac{1}{ln(2)} * e^{n} = c * e^{n}$\n",
+    "* $\\frac{e^{n}}{2^{n}} = (\\frac{e}{2})^{n}$ (Properties of exponents)\n",
+    "* The base of the exponential function is $(\\frac{e}{2}) \\gt 1$ therefore as $n$ goes to infinity so will $(\\frac{e}{2})^{n}$ (Properties of expontential functions)\n",
     "\n",
     "So we showed that as $n$ approaches infinity $\\frac{f(n)}{g(n)}$ also approaches infinity showing that:\n",
     "\n",
@@ -213,7 +212,13 @@
     "\n",
     "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
     "\n",
-    "My original algorithm was doing 2n comparisons in the worst case. The implementation that does at most 1.5n comparisons is below. Because array A has an odd length both the min and max values are initialized as the first term in the array and set the starting index to be 1. Then the iteration through the array compares adjacent values in the array so the first round of iteration does comparison between 3 and 5 which is true for the arr[i] < arr[i + 1] case. Going into that if it then checks if 3 is less than the min_val which is true because min_val is set to 9 at the time. So the min_val is then set to 3. 5 is then compared to max_val which is also 9 at the time but that fails so max_val remains 9 for that iteration. The iterations continue until i reaches the array's length - 1 and then returns an object identifying the min and max values of the passed in array.\n",
+    "My original algorithm was doing 2n comparisons in the worst case. The implementation that does at most 1.5n comparisons is below. Because array A has an odd length both the min and max values are initialized as the first term in the array and set the starting index to be 1. Then the iteration through the array compares adjacent values in the array so the first round of iteration does comparison between 3 and 5 which is true for the arr[i] < arr[i + 1] case. Going into that if it then checks if 3 is less than the min_val which is true because min_val is set to 9 at the time. So the min_val is then set to 3. 5 is then compared to max_val which is also 9 at the time but that fails so max_val remains 9 for that iteration. The iterations continue until i reaches the array's length - 1 and then returns an object identifying the min and max values of the passed in array. The total number of comparisons for this algorithm is: \n",
+    "\n",
+    "* $\\frac{n}{2}$ For the first comparison to find the local min/max of the pair\n",
+    "* $\\frac{n}{2}$ For the comparison to find the global minimum in the innermost if's in the for loop\n",
+    "* $\\frac{n}{2}$ For the comparison to find the global maximum in the innermost if's in the for loop\n",
+    "\n",
+    "Leading to a total of $3 * \\frac{n}{2}$ comparisons which is $1.5n$ comparisons.\n",
     "\n",
     "```python\n",
     "def find_min_max(arr):\n",
@@ -385,6 +390,15 @@
     "\n",
     "The reason for the difference in the running times is because the recursive implementation requires multiple calls to the fibonacci function to obtain the previous values in the sequence this call stack causes the runtime to become exponential. The iterative implementation has a linear runtime because each term in the sequence is only computed once when computing the sum of all of the terms. If the recursive call cached the previous values rather than recomputing them for each function call it's runtime would also be linear (memoization)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
