Added solution for part b of question 6

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -72,7 +72,8 @@
     "* $T(2^{k + 1}) = 2T(\\frac{2^{k + 1}}{2}) + 2^{k + 1}$\n",
     "* $2T(2^{k}) + 2^{k + 1}$\n",
     "* $2(2^{k} * log_{2}(2^{k})) + 2^{k + 1}$\n",
-    "* $2^{k + 1}((log_{2}(2^{k})) + 1)$\n",
+    "* $2^{k + 1}(log_{2}(2^{k}) + 1)$\n",
+    "* $2^{k + 1}(log_{2}(2^{k}) + log_{2}(2))$\n",
     "* $2^{k + 1} * log_{2}(2^{k + 1})$\n",
     "\n",
     "This proves through induction that $T(n) = n * log_{2}(n)$ when $n$ is an exact power of $2$\n",
@@ -130,7 +131,7 @@
     "\n",
     "* $\\frac{f(n)}{g(n)} = \\frac{e^{n}}{2^{n}}$\n",
     "* $\\frac{e^{n}}{2^{n}} = (\\frac{e}{2})^{n}$ (Properties of exponents)\n",
-    "* The base of the exponential function is $(\\frac{e}{2}) \\gt 1$ therefore as $n$ goes to infinity so will $(\\frac{e}{2})^{n}$ (Properties of expontential functions)\n",
+    "* The base of the exponential function is $(\\frac{e}{2}) \\gt 1$ because $e \\approx 2.7$ therefore as $n$ goes to infinity so will $(\\frac{e}{2})^{n}$ because the base of the function is greater than one. (Properties of expontential functions)\n",
     "\n",
     "So we showed that as $n$ approaches infinity $\\frac{f(n)}{g(n)}$ also approaches infinity showing that:\n",
     "\n",
@@ -267,13 +268,33 @@
     "Suppose there are $c_{0} = 2 max(c_{1}, c_{2})$ and $n_{0} = max(n_{1}, n_{2})$ therefore:\n",
     "\n",
     "* $c_{1}g_{1}(n) + c_{2}g_{2}(n) = c_{0}(g_{1}(n) + g_{2}(n)) / 2$ where $n_{0} \\leq n$\n",
-    "* $c_{0}(g_{1}(n) + g_{2}(n)) / 2 = c_{0}max(g_{1}(n), g_{2}(n))$\n",
+    "* $c_{0}(g_{1}(n) + g_{2}(n)) / 2 = c_{0}(g_{1}(n) + g_{2}(n))$ Where the $\\frac{1}{2}$ could be incorporated into the $c_{0}$\n",
     "\n",
-    "Therefore by definition:\n",
+    "Therefore there exists some $c_{0}$ and $n_{0}$ such that:\n",
     "\n",
-    "* $f_1(n) + f_2(n) = O(max(g_{1}(n), g_{2}(n))$\n",
+    "* $f_1(n) + f_2(n) = O(g_{1}(n) + g_{2}(n))$ when $n \\geq n_{0}$\n",
     "\n",
     "b) If $f_1(n) = O(g_1(n))$ and $f_2(n) = O(g_2(n))$ then $\\frac{f_1(n)}{f_2(n)} = O(\\frac{g_1(n)}{g_2(n)})$  \n",
+    "\n",
+    "Suppose that $f_1(n) = n$, $f_2(n) = n^{3}$, $g_1(n) = n^{2}$, and $g_2(n) = n^{5}$ (both $c_{1}$ and $c_{2}$ are $1$) and $f_1(n) = O(g_1(n)), n_1 \\leq n$ and $f_2(n) = O(g_2(n)), n_2 \\leq n$. Therefore if the conjecture is true:\n",
+    "\n",
+    "* $\\frac{f_1(n)}{f_2(n)} = \\frac{n}{n^{3}} \\leq \\frac{n^{2}}{n^{5}} max(n_1, n_2) \\leq n$\n",
+    "* $\\frac{f_1(n)}{f_2(n)} = \\frac{n}{n^{3}} = \\frac{1}{n^{2}}$ (Simplifying terms)\n",
+    "* $\\frac{g_1(n)}{g_2(n)} = \\frac{n^{2}}{n^{5}} = \\frac{1}{n^{3}}$ (Simplifying terms)\n",
+    "\n",
+    "So we are left with:\n",
+    "\n",
+    "* $\\frac{1}{n^{2}} \\leq \\frac{1}{n^{3}}$ for $max(n_1, n_2) \\leq n$\n",
+    "\n",
+    "However in order for this to be true the quotiant of the g functions divided by the quotiant of the f functions must approach infinity as n approaches infinity\n",
+    "\n",
+    "* $\\frac{\\frac{1}{n^{3}}}{\\frac{1}{n^{2}}} = \\frac{n^2}{n^3} = \\frac{1}{n}$ (Algebraic manipulation)\n",
+    "\n",
+    "When simplified we can see the resulting expression will approach $0$ as $n$ goes to infinity therefore:\n",
+    "\n",
+    "$\\frac{f_1(n)}{f_2(n)} = \\Omega(\\frac{g_1(n)}{g_2(n)})$ for this example that fulfills assumptions of the if-clause\n",
+    "\n",
+    "Thus the conjecture is contradicted.\n",
     "\n",
     "7) **Fibonacci Numbers:**\n",
     "\n",
@@ -388,7 +409,7 @@
     "\n",
     "$y = 0.00021384x - 0.00970961$\n",
     "\n",
-    "The reason for the difference in the running times is because the recursive implementation requires multiple calls to the fibonacci function to obtain the previous values in the sequence this call stack causes the runtime to become exponential. The iterative implementation has a linear runtime because each term in the sequence is only computed once when computing the sum of all of the terms. If the recursive call cached the previous values rather than recomputing them for each function call it's runtime would also be linear (memoization)."
+    "The reason for the difference in the running times is because the recursive implementation requires multiple calls to the fibonacci function to obtain the previous values in the sequence when calculating the sum, this call stack causes the runtime to become exponential. The iterative implementation has a linear runtime because each term in the sequence is only computed once when computing the sum of all of the terms. If the recursive call cached the previous values rather than recomputing them for each function call it's runtime would also be linear (memoization)."
    ]
   },
   {
