--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -27,15 +27,7 @@
     "\n",
     "Based on the graph the values for which insertion sort outperforms merge sort would be when n is around 0 to 5 and when n is around 40 to 45. The values of the two graphs at those values of n are in the table below:\n",
     "\n",
-    "$f(n)$ | $1$ | $2$ | $3$ | $4$ | $5$ \n",
-    ":--------:|----:|----:|----:|----:|----:\n",
-    "$x$ | $1$| $2$ | $3$ | $4$ | $5$\n",
-    "$8log_{2}(n)$ | $0$ | $8$ | $12.67970$ | $16$ | $18.57542$\n",
-    "\n",
-    "$f(n)$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
-    ":--------:|----:|----:|----:|----:|----:\n",
-    "$x$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
-    "$8log_{2}(n)$ | $42.5754$ | $42.8604$ | $43.1385$ | $43.4101$ | $43.6754$\n",
+    "See end of homework for this table (There was a markup issue when converting to pdf)\n",
     "\n",
     "As seen in the table the intersections occur when 1 < n < 2 and when 43 < n < 44 so for the sake of keeping n as a whole number the range will be defined as follows: \n",
     "\n",
@@ -43,16 +35,7 @@
     "\n",
     "2) (CLRS) Problem 1-1 on pages 14-15. Fill in the given table. Hint: It may be helpful to use a spreadsheet or Wolfram Alpha to find the values.\n",
     "\n",
-    "Item | 1 second | 1 miniute | 1 hour | 1 day | 1 month | 1 year | 1 century\n",
-    ":----:|----:|----:|----:|----:|----:|----:|----:\n",
-    "$lg{n}$ | $2^{10^6}$  | $2^{6*10^7}$ | $2^{36*10^8}$ | $2^{864*10^8}$ | $2^{25920*10^8}$ | $2^{315360*10^8}$ | $2^{31556736*10^8}$\n",
-    "$n^{1/2}$ | $10^{12}$ | $36*10^{14}$ | $1296*10^{16}$ | $746496*10^{16}$ | $6718464*10^{18}$ | $994519296*10^{18}$ | $995827586973696*10^{16}$ \n",
-    " $n$ | $10^6$  | $6*10^7$ | $36*10^8$ | $864*10^8$ | $2592*10^9$ | $31536*10^9$ | $31556736*10^8$\n",
-    "$nlg{n}$ | $62746$ | $2801417$ | $133378058$ | $2755147513$ | $71870856404$ | $797633893349$ | $68654697441062$\n",
-    "$n^2$ | $1000$ | $7745$ | $60000$ | $293938$ | $1609968$ | $5615692$ | $56175382$\n",
-    "$n^3$ | $100$ | $391$ | $1532$ | $4420$ | $13736$ | $31593$ | $146677$\n",
-    "$2^n$ | $19$ | $25$ | $31$ | $36$ | $41$ | $44$ | $51$\n",
-    "$n!$ | $9$ | $11$ | $12$ | $13$ | $15$ | $16$ | $17$\n",
+    "See end of homework for this table (There was a markup issue when converting to pdf)\n",
     "\n",
     "3) (CLRS) 2.3-3 on page 39.  Use mathematical induction to show that when n is an exact power of 2, the solution of the recurrence \n",
     "\n",
@@ -369,15 +352,7 @@
     "\n",
     "The entries in the table are in milliseconds.\n",
     "\n",
-    "Function | $5$ | $6$ | $7$ | $8$ | $9$ | $10$ | $11$ | $12$ | $13$ | $14$ | $15$ | $16$ | $17$ | $18$ | $19$ | $20$\n",
-    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
-    "Recursive | $0.015$ | $0.015$ | $0.022$ | $0.048$ | $0.056$ | $0.083$ | $0.132$ | $0.209$ | $0.341$ | $0.533$ | $0.818$ | $1.189$ | $1.92$ | $3.087$ | $4.407$ | $6.66$ \n",
-    "Iterative | $0.005$ | $0.004$ | $0.003$ | $0.004$ | $0.004$ | $0.005$ | $0.005$ | $0.005$ | $0.005$ | $0.005$ | $0.006$ | $0.005$ | $0.005$ | $0.005$ | $0.006$ | $0.006$  \n",
-    "\n",
-    "Function | $21$ | $22$ | $23$ | $24$ | $25$ | $26$ | $27$ | $28$ | $29$ | $30$\n",
-    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
-    "Recursive | $10.73$ | $17.35$ | $28.34$ | $45.86$ | $75.97$ | $122.9$ | $201.0$ | $322.8$ | $521.5$ | $850.0$\n",
-    "Iterative | $0.005$ | $0.006$ | $0.006$ | $0.005$ | $0.006$ | $0.007$ | $0.007$ | $0.007$ | $0.008$ | $0.007$\n",
+    "See end of homework for the tables (There was a markup issue when converting to pdf)\n",
     "\n",
     "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis. You may use Excel,  Matlab, R or any other software.\n",
     "\n",
@@ -410,6 +385,51 @@
     "$y = 0.00021384x - 0.00970961$\n",
     "\n",
     "The reason for the difference in the running times is because the recursive implementation requires multiple calls to the fibonacci function to obtain the previous values in the sequence when calculating the sum, this call stack causes the runtime to become exponential. The iterative implementation has a linear runtime because each term in the sequence is only computed once when computing the sum of all of the terms. If the recursive call cached the previous values rather than recomputing them for each function call it's runtime would also be linear (memoization)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table Appendix:\n",
+    "\n",
+    "Question 1:\n",
+    "\n",
+    "$f(n)$ | $1$ | $2$ | $3$ | $4$ | $5$ \n",
+    ":--------:|----:|----:|----:|----:|----:\n",
+    "$x$ | $1$| $2$ | $3$ | $4$ | $5$\n",
+    "$8log_{2}(n)$ | $0$ | $8$ | $12.67970$ | $16$ | $18.57542$\n",
+    "\n",
+    "$f(n)$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
+    ":--------:|----:|----:|----:|----:|----:\n",
+    "$x$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
+    "$8log_{2}(n)$ | $42.5754$ | $42.8604$ | $43.1385$ | $43.4101$ | $43.6754$\n",
+    "\n",
+    "\n",
+    "Question 2:\n",
+    "\n",
+    "Item | 1 second | 1 miniute | 1 hour | 1 day | 1 month | 1 year | 1 century\n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "$lg{n}$ | $2^{10^6}$  | $2^{6*10^7}$ | $2^{36*10^8}$ | $2^{864*10^8}$ | $2^{25920*10^8}$ | $2^{315360*10^8}$ | $2^{31556736*10^8}$\n",
+    "$n^{1/2}$ | $10^{12}$ | $36*10^{14}$ | $1296*10^{16}$ | $746496*10^{16}$ | $6718464*10^{18}$ | $994519296*10^{18}$ | $995827586973696*10^{16}$ \n",
+    " $n$ | $10^6$  | $6*10^7$ | $36*10^8$ | $864*10^8$ | $2592*10^9$ | $31536*10^9$ | $31556736*10^8$\n",
+    "$nlg{n}$ | $62746$ | $2801417$ | $133378058$ | $2755147513$ | $71870856404$ | $797633893349$ | $68654697441062$\n",
+    "$n^2$ | $1000$ | $7745$ | $60000$ | $293938$ | $1609968$ | $5615692$ | $56175382$\n",
+    "$n^3$ | $100$ | $391$ | $1532$ | $4420$ | $13736$ | $31593$ | $146677$\n",
+    "$2^n$ | $19$ | $25$ | $31$ | $36$ | $41$ | $44$ | $51$\n",
+    "$n!$ | $9$ | $11$ | $12$ | $13$ | $15$ | $16$ | $17$\n",
+    "\n",
+    "Question 7: \n",
+    "\n",
+    "Function | $5$ | $6$ | $7$ | $8$ | $9$ | $10$ | $11$ | $12$ | $13$ | $14$ | $15$ | $16$ | $17$ \n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "Recursive | $0.015$ | $0.015$ | $0.022$ | $0.048$ | $0.056$ | $0.083$ | $0.132$ | $0.209$ | $0.341$ | $0.533$ | $0.818$ | $1.189$ | $1.92$  \n",
+    "Iterative | $0.005$ | $0.004$ | $0.003$ | $0.004$ | $0.004$ | $0.005$ | $0.005$ | $0.005$ | $0.005$ | $0.005$ | $0.006$ | $0.005$ | $0.005$  \n",
+    "\n",
+    "Function | $18$ | $19$ | $20$ | $21$ | $22$ | $23$ | $24$ | $25$ | $26$ | $27$ | $28$ | $29$ | $30$\n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "Recursive | $3.087$ | $4.407$ | $6.66$ | $10.73$ | $17.35$ | $28.34$ | $45.86$ | $75.97$ | $122.9$ | $201.0$ | $322.8$ | $521.5$ | $850.0$\n",
+    "Iterative | $0.005$ | $0.006$ | $0.006$ | $0.005$ | $0.006$ | $0.006$ | $0.005$ | $0.006$ | $0.007$ | $0.007$ | $0.007$ | $0.008$ | $0.007$"
    ]
   },
   {
