Work on question one for hw 2

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -12,11 +12,34 @@
     "\n",
     "a) $T(n) = T(n - 2) + 2$\n",
     "\n",
+    "* $T(n) = T(n - 4) + 2 + 2$ (Substituting $T(n - 2)$ into $T(n)$\n",
+    "* $T(n) = 1 + ... + 2 + 2$ (Expanding out the recurrence where the $T(0)$ or $T(1)$ is $1$)\n",
+    "\n",
+    "\n",
     "b) $T(n) = 3T(n - 1) + 1$\n",
     "\n",
     "c) $T(n) = 2T(\\frac{n}{4}) + n^{2}$\n",
     "\n",
+    "(Using Master Theorem)\n",
+    "\n",
+    "* $a = 2, b = 4, c = 2$\n",
+    "* $log_{4}(2) = \\frac{1}{2}$\n",
+    "* $c \\gt \\frac{1}{2}$ (Therefore case 3 applies)\n",
+    "* $f(n) = n^{2}$\n",
+    "* $2 * f(\\frac{n}{4}) \\leq kf(n)$ (Regularity condition)\n",
+    "* $2 * (\\frac{n}{4})^{2} \\leq k * n^{2}$ (Substituted $n^{2}$ for $f(n)$)\n",
+    "* $2 * \\frac{n^{2}}{16} \\leq k * n^{2}$\n",
+    "* $\\frac{n^{2}}{8} \\leq k * n^{2}$ Therefore:\n",
+    "* $k = \\frac{1}{8} \\lt 1$ (The regularity condition holds)\n",
+    "\n",
     "d) $T(n) = 9T(\\frac{n}{3}) + 6n^{2}$\n",
+    "\n",
+    "(Using Master Theorem)\n",
+    "\n",
+    "* $a = 9, b = 3, c = 2$\n",
+    "* $log_{3}(9) = 2$\n",
+    "* $c = 2 = log_{3}(9)$ (Therefore case 2 applies)\n",
+    "* \n",
     "\n",
     "2) Consider the following algorithm for sorting.\n",
     "\n",
@@ -75,21 +98,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
