Added solutions to part a and b of question one

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -12,11 +12,23 @@
     "\n",
     "a) $T(n) = T(n - 2) + 2$\n",
     "\n",
-    "* $T(n) = T(n - 4) + 2 + 2$ (Substituting $T(n - 2)$ into $T(n)$\n",
-    "* $T(n) = 1 + ... + 2 + 2$ (Expanding out the recurrence where the $T(0)$ or $T(1)$ is $1$)\n",
+    "(Using Muster Method)\n",
     "\n",
+    "* $T(n) = a * T(n - b) + f(n)$\n",
+    "* $a = 1, b = 2$ and because $f(n)= \\theta(n^{0}) = 2, d = 0$\n",
+    "* Because $a = 1$ the recurrence bound is $\\theta(n^{d + 1})$\n",
+    "* $\\theta(n^{d + 1}) = \\theta(n^{0 + 1})$\n",
+    "* Therefore $T(n)$ is $\\theta(n)$\n",
     "\n",
     "b) $T(n) = 3T(n - 1) + 1$\n",
+    "\n",
+    "(Using Muster Method)\n",
+    "\n",
+    "* $T(n) = a * T(n - b) + f(n)$\n",
+    "* $a = 3, b = 1$ and because $f(n) = \\theta(n^{0}) = 1, d = 0$\n",
+    "* Because $a \\gt 1$ the recurrence bound is $\\theta(n^{d} * a^{\\frac{n}{b}})$\n",
+    "* $\\theta(n^{d} * a^{\\frac{n}{b}}) = \\theta(n^{0} * 3^{\\frac{n}{1}})$\n",
+    "* Therefore, $T(n)$ is $\\theta(3^{n})$\n",
     "\n",
     "c) $T(n) = 2T(\\frac{n}{4}) + n^{2}$\n",
     "\n",
@@ -69,6 +81,8 @@
     "asymptotic complexity of the algorithm. Compare the worst-case running time of the quaternary search algorithm\n",
     "to that of the binary search algorithm.\n",
     "\n",
+    "T(n/4) + 3\n",
+    "\n",
     "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value\n",
     "in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine\n",
     "the asymptotic running time of the algorithm. Compare the running time of the recursive min_and_max algorithm\n",
@@ -89,21 +103,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
