Updates to hw #2

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -68,6 +68,10 @@
     "\n",
     "a) Explain why the STOOGESORT algorithm sorts its input. (This is not a formal proof)\n",
     "\n",
+    "For when $n = 2$ (base case) <code>STOOGESORT(A[0, 1])</code> while properly sort the array by swapping the two elements if the first element is greater than the second, otherwise the array will be unchanged because it is already sorted.\n",
+    "\n",
+    "\n",
+    "\n",
     "b) Would STOOGESORT still sort correctly if we replaced k = ceiling(2n/3) with m = floor(2n/3)? If yes prove, if no give a counterexample. (Hint: what happens when n = 4?)\n",
     "\n",
     "c) State a recurrence for the number of comparisons executed by STOOGESORT.\n",
@@ -81,12 +85,57 @@
     "asymptotic complexity of the algorithm. Compare the worst-case running time of the quaternary search algorithm\n",
     "to that of the binary search algorithm.\n",
     "\n",
-    "T(n/4) + 3\n",
+    "```python\n",
+    "def quaternary_search(arr):\n",
+    "    \n",
+    "```\n",
     "\n",
     "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value\n",
     "in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine\n",
     "the asymptotic running time of the algorithm. Compare the running time of the recursive min_and_max algorithm\n",
     "to that of an iterative algorithm for finding the minimum and maximum values of an array.\n",
+    "\n",
+    "Pseudocode for max_min method which will return the (min, max) pair:\n",
+    "\n",
+    "```\n",
+    "max_min(arr[0..n]) {\n",
+    "    if (n == 1) {\n",
+    "        return (arr[0], arr[0])\n",
+    "    } else if (n == 2) {\n",
+    "        if (arr[0] < arr[1]) {\n",
+    "            return (arr[0], arr[1])\n",
+    "        } else {\n",
+    "            return (arr[1], arr[0])\n",
+    "        }\n",
+    "    } else {\n",
+    "        (min_left, max_left) = max_min(arr[0..(n/2)])\n",
+    "        (min_right, max_right) = max_min([(n/2 + 1)..n])\n",
+    "        \n",
+    "        if (max_left < max_right) {\n",
+    "            max = max_right\n",
+    "        } else {\n",
+    "            max = max_left\n",
+    "        }\n",
+    "        \n",
+    "        if (min_left < min_right) {\n",
+    "            min = min_left\n",
+    "        } else {\n",
+    "            min = min_right\n",
+    "        }\n",
+    "        \n",
+    "        return (min, max)\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "Determine the recurrence:\n",
+    "\n",
+    "When the array only has one term no comparisons are made therefore $T(1) = 0$ and when there are only two elements only one comparison is made therefore $T(2) = 1$.\n",
+    "\n",
+    "For the case of $n \\gt 2$:\n",
+    "\n",
+    "$T(n) = 2T(n/2) + 2$\n",
+    "\n",
+    "The reason being from the above pseudocode showing that there are two recursive calls of min_max where each call is passed in a respective half of the total array, which are then used to then make comparisons to each others' local mins and maxs to determine the overall (global) min and max which is returned.\n",
     "\n",
     "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The\n",
     "majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority\n",
@@ -99,6 +148,15 @@
     "recurrence for the algorithm and determine the asymptotic running time.\n",
     "Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
