--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -34,24 +34,29 @@
     "\n",
     "(Using Master Theorem)\n",
     "\n",
-    "* $a = 2, b = 4, c = 2$\n",
-    "* $log_{4}(2) = \\frac{1}{2}$\n",
-    "* $c \\gt \\frac{1}{2}$ (Therefore case 3 applies)\n",
-    "* $f(n) = n^{2}$\n",
-    "* $2 * f(\\frac{n}{4}) \\leq kf(n)$ (Regularity condition)\n",
-    "* $2 * (\\frac{n}{4})^{2} \\leq k * n^{2}$ (Substituted $n^{2}$ for $f(n)$)\n",
-    "* $2 * \\frac{n^{2}}{16} \\leq k * n^{2}$\n",
-    "* $\\frac{n^{2}}{8} \\leq k * n^{2}$ Therefore:\n",
-    "* $k = \\frac{1}{8} \\lt 1$ (The regularity condition holds)\n",
+    "* $a = 2, b = 4, f(n) = n^{2}$\n",
+    "* $n^{log_{b}(a)} = n^{log_{4}(2)} = n^{\\frac{1}{2}}$\n",
+    "* $f(n) = O(n^{log_{4}(2) + \\epsilon}) = O(n^{\\frac{1}{2} + \\epsilon})$\n",
+    "* $\\frac{1}{2} + \\epsilon = 2$\n",
+    "* $\\epsilon = 2 - \\frac{1}{2} = 1.5$\n",
+    "* $a * f(\\frac{n}{b}) \\leq c * f(n)$ (Regularity condition)\n",
+    "* $2 * (\\frac{n}{4})^{2} \\leq c * n^{2}$\n",
+    "* $2 * \\frac{n^{2}}{16} \\leq c * n^{2}$\n",
+    "* $\\frac{n^{2}}{8} \\leq c * n^{2}$\n",
+    "* $\\frac{1}{8} \\leq c$\n",
+    "* $1 \\lt c$ (Regularity condition holds)\n",
+    "* Therefore $T(n) = \\theta(f(n)) = \\theta(n^{2})$\n",
     "\n",
     "d) $T(n) = 9T(\\frac{n}{3}) + 6n^{2}$\n",
     "\n",
     "(Using Master Theorem)\n",
     "\n",
-    "* $a = 9, b = 3, c = 2$\n",
-    "* $log_{3}(9) = 2$\n",
-    "* $c = 2 = log_{3}(9)$ (Therefore case 2 applies)\n",
-    "* \n",
+    "* $a = 9, b = 3, f(n) = 6n^{2}$\n",
+    "* $n^{log_{b}(a)} = n^{log_{3}(9)} = n^{2}$\n",
+    "* $f(n) = 6n^{2} = \\theta(n^{2})$ \n",
+    "* $f(n) = \\theta(n^{log_{3}(9)}) = \\theta(n^{2})$ (Therefore case 2 applies)\n",
+    "* Therefore $T(n) = \\theta(n^{log_{b}(a)} * log_2(n)) = \\theta(n^{log_{3}(9)} * log_2(n))$\n",
+    "* $T(n) = \\theta(n^{2} * log_2(n))$\n",
     "\n",
     "2) Consider the following algorithm for sorting.\n",
     "\n",
