Added content to question 2

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -75,13 +75,29 @@
     "\n",
     "For when $n = 2$ (base case) <code>STOOGESORT(A[0, 1])</code> while properly sort the array by swapping the two elements if the first element is greater than the second, otherwise the array will be unchanged because it is already sorted.\n",
     "\n",
+    "However when the length of the array is greater than 2 e.g. ($n \\geq 3$) an integer k is calculated which is the ceiling of the $\\frac{2}{3}$ of length $n$. Then there are the three recursive calls to STOOGESORT where the passed in arrays for each call are as follows:\n",
     "\n",
+    "* First subarray is the first $\\frac{2}{3}$ of the total array which is then sorted in the first call\n",
+    "* Second subarray is the last $\\frac{2}{3}$ of the total array which is then sorted in the second call\n",
+    "* The third recursive call sorts the first $\\frac{2}{3}$ of the total array again like the first call before it.\n",
     "\n",
     "b) Would STOOGESORT still sort correctly if we replaced k = ceiling(2n/3) with m = floor(2n/3)? If yes prove, if no give a counterexample. (Hint: what happens when n = 4?)\n",
     "\n",
+    "\n",
+    "\n",
     "c) State a recurrence for the number of comparisons executed by STOOGESORT.\n",
     "\n",
+    "* $T(n) = a * T(\\frac{n}{b}) + f(n)$ Whereas $a = 3$ because of $3$ recursive calls and $b = \\frac{2}{3}$ because the input $n$ is sub-divided into $\\frac{2}{3}$ sub-problems therefore:\n",
+    "* $T(n) = 3 * T(\\frac{2n}{3}) + \\theta(1)$\n",
+    "\n",
     "d) Solve the recurrence.\n",
+    "\n",
+    "Based on the recurrence determined in part c we can use the Master Method to solve the recurrence:\n",
+    "\n",
+    "* $T(n) = 1 + 3 * T(\\frac{2n}{3})$\n",
+    "* $T(n) = 1 + 3 + 9 * T(\\frac{4}{9})$\n",
+    "* $1 + 3 + 9 * T(\\frac{4}{9}) = 1 + 3 + 3^{2} + ... + 3^{log_{\\frac{3}{2}\n",
+    "\n",
     "\n",
     "\n",
     "3) The quaternary search algorithm is a modification of the binary search algorithm that splits the input\n",
@@ -151,7 +167,8 @@
     "the form: “does A[i] = A[j]?” in constant time. Give a detailed verbal description and pseudocode for a divide and\n",
     "conquer algorithm to find a majority element in A (or determine that no majority element exists). Give a\n",
     "recurrence for the algorithm and determine the asymptotic running time.\n",
-    "Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn)."
+    "Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn).\n",
+    "\n"
    ]
   },
   {
