--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "* $T(n) = 1 + 3 * T(\\frac{2n}{3})$\n",
     "* $T(n) = 1 + 3 + 9 * T(\\frac{4}{9})$\n",
-    "* $1 + 3 + 9 * T(\\frac{4}{9}) = 1 + 3 + 3^{2} + ... + 3^{log_{\\frac{3}{2}\n",
+    "* $1 + 3 + 9 * T(\\frac{4}{9}) = 1 + 3 + 3^{2} + ... + 3^{log_{\\frac{3}{2}}}$\n",
     "\n",
     "\n",
     "\n",
@@ -168,7 +168,48 @@
     "conquer algorithm to find a majority element in A (or determine that no majority element exists). Give a\n",
     "recurrence for the algorithm and determine the asymptotic running time.\n",
     "Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn).\n",
-    "\n"
+    "\n",
+    "The algorithm starts by dividing the array in half and calling the method on each respective half. This is related to the stragedy of the merge sort algorithm. When the arrays passed in become single element those single elements will be returned as the \"majority\" of their single element arrays. The other levels will return elements as a result of the two recursive calls. The crux of the algorithm is that if there exists a majority element in the array then that element will be a majority element for either/both of the left or right sub-arrays. There are four possible outcomes from the algorithm:\n",
+    "\n",
+    "* Both function calls do not return a majority element and as a result the array passed in does not have a majority element to output\n",
+    "* The right side is a majority but the left side isn't. In this case the recursive call on the right side returns an element that is a majority for the right side, so the next step is to search the complete array for how many times this element occurs and if it is the majority element for the total array than return that element.\n",
+    "* This situation would be similar to the one directly above but it would be the case that the left side returned a majority and the right did not.\n",
+    "* Both calls on the left and right sub-arrays return majority elements. So there needs to be a count of both elements in the combined array to determine if either one is in fact a majority element of the total array, if so then it would be returned, otherwise no element would be returned.\n",
+    "\n",
+    "The overall function will either return a majority element if found or nothing if a majority element does not exist.\n",
+    "\n",
+    "Pseudo-code:\n",
+    "\n",
+    "```\n",
+    "find_majority_el(arr[1...n]){\n",
+    "    if (n == 1) {\n",
+    "        return arr[0];\n",
+    "    } else {\n",
+    "        left_majority = find_majority_el(arr[1...n/2]);\n",
+    "        right_majority = find_majority_el(arr[n/2 + 1 ... n])\n",
+    "        \n",
+    "        if (left_majority == right_majority) {\n",
+    "            return left_majority\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "When finding the recurrence we analyze the running time of the algorithm:\n",
+    "\n",
+    "There are two recursive calls made in the algorithm with each of those calls being passed half of the original array. The non-recursive costs are when we have to compare each number at most twice (twice in the fourth scenario). So the non-recursive costs would be upper bounded at $2n$ comparisons where $n$ is the number of elements in the original array. Therefore the recurrence can be written as follows:\n",
+    "\n",
+    "* $T(1) = 0$\n",
+    "* $T(n) = 2 * T(\\frac{n}{2}) + 2n$\n",
+    "\n",
+    "Now to find the running time we can use the Master Method:\n",
+    "\n",
+    "* $a = 2, b = 2, f(n) = 2n$\n",
+    "* $n^{log_{b}(a)} = n^{log_{2}(2)} = n^{1} = \\theta(n)$\n",
+    "* $f(n) = 2n = \\theta(n)$ (Therefore case 2 applies)\n",
+    "* Therefore $T(n) = \\theta(n^{log_{b}(a)} * log_2(n)) = \\theta(n * log_2(n))$\n",
+    "\n",
+    "Thus showing that the implementation shown above satisfies the requirement of having a runtime of $\\theta(n * log_2(n))$ at worst."
    ]
   },
   {
