--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -178,21 +178,37 @@
     "\n",
     "The overall function will either return a majority element if found or nothing if a majority element does not exist.\n",
     "\n",
-    "Pseudo-code:\n",
+    "Pseudo-code in Python:\n",
     "\n",
-    "```\n",
-    "find_majority_el(arr[1...n]){\n",
-    "    if (n == 1) {\n",
-    "        return arr[0];\n",
-    "    } else {\n",
-    "        left_majority = find_majority_el(arr[1...n/2]);\n",
-    "        right_majority = find_majority_el(arr[n/2 + 1 ... n])\n",
-    "        \n",
-    "        if (left_majority == right_majority) {\n",
-    "            return left_majority\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
+    "```python\n",
+    "def get_frequency(arr, el):\n",
+    "    count = 0\n",
+    "    \n",
+    "    for i in arr:\n",
+    "        if i == el:\n",
+    "            count += 1\n",
+    "    \n",
+    "    return count\n",
+    "\n",
+    "def find_majority_el(arr):\n",
+    "    if len(arr) == 1:\n",
+    "        return arr[0]\n",
+    "    k = math.floor(len(arr) / 2)\n",
+    "    left_majority = find_majority_el(arr[0:k])\n",
+    "    right_majority = find_majority_el(arr[k:])\n",
+    "    \n",
+    "    if left_majority == right_majority:\n",
+    "        return left_majority\n",
+    "    \n",
+    "    lcount = get_frequency(arr, left_majority)\n",
+    "    rcount = get_frequency(arr, right_majority)\n",
+    "    \n",
+    "    if lcount > k:\n",
+    "        return left_majority\n",
+    "    elif rcount > k:\n",
+    "        return right_majority\n",
+    "    else:\n",
+    "        return None\n",
     "```\n",
     "\n",
     "When finding the recurrence we analyze the running time of the algorithm:\n",
