Added content to the answer for question 3

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -107,9 +107,48 @@
     "to that of the binary search algorithm.\n",
     "\n",
     "```python\n",
-    "def quaternary_search(arr):\n",
+    "def quaternary_search(arr, el):\n",
+    "    start = 0\n",
+    "    first_quad = int(len(arr) / 4) - 1\n",
+    "    mid_point = int(len(arr) / 2) - 1\n",
+    "    third_quad= int(len(arr) * (3 / 4)) - 1\n",
+    "    end = len(arr) - 1\n",
     "    \n",
+    "    list_of_quads = [start, first_quad, mid_point, third_quad, end]\n",
+    "    \n",
+    "    try:\n",
+    "        index = [arr[i] for i in list_of_quads].index(el)\n",
+    "        return list_of_quads[index]\n",
+    "    except:\n",
+    "        pass\n",
+    "        \n",
+    "    if (arr[start] < el < arr[first_quad]):\n",
+    "        return quadternary_search(arr[start:first_quad], el)\n",
+    "    elif (arr[first_quad] < el < arr[mid_point]):\n",
+    "        return quadternary_search(arr[first_quad:mid_point], el)\n",
+    "    elif (arr[mid_point] < el < arr[third_quad]):\n",
+    "        return quadternary_search(arr[mid_point:third_quad], el)\n",
+    "    elif (arr[third_quad] < el < arr[end]):\n",
+    "        return quadternary_search(arr[third_quad:end], el)\n",
+    "    else:\n",
+    "        return -1\n",
     "```\n",
+    "\n",
+    "The recurrence for quaternary search is as follows:\n",
+    "\n",
+    "* $T(n) = T(\\frac{n}{4}) + c$\n",
+    "\n",
+    "The reason for this is because only a single recursive call is made in the worst case and the searching for the element in the list is done by looking up array entries by index which is a constant time operation ($c$). The $b$ factor is $4$ because the search sub-divides the passed in array into quarter sized sub-problems rather than the halves encountered with binary search. Based on the above recurrence we can solve it to show the runtime of quaternary search:\n",
+    "\n",
+    "(Using the master method)\n",
+    "\n",
+    "* $a = 1, b = 4, f(n) = c$\n",
+    "* $n^{log_{b}(a)} = n^{log_{4}(1)} = n^{0}$\n",
+    "* $n^{0} = 1 = \\theta(1) = \\theta(c)$ (Therefore case 2 applies)\n",
+    "* Therefore $T(n) = \\theta(n^{log_{b}(a)} * log_2(n)) = \\theta(1 * log_2(n))$\n",
+    "* The runtime for quaternary search is $T(n) = \\theta(log_2(n))$\n",
+    "\n",
+    "The worst case runtime for the quaternary search is fundamentally equivalent to the worst case runtime for binary search because the runtime of binary search is $T(n) = \\theta(log_2(n))$.\n",
     "\n",
     "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value\n",
     "in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine\n",
@@ -157,6 +196,11 @@
     "$T(n) = 2T(n/2) + 2$\n",
     "\n",
     "The reason being from the above pseudocode showing that there are two recursive calls of min_max where each call is passed in a respective half of the total array, which are then used to then make comparisons to each others' local mins and maxs to determine the overall (global) min and max which is returned.\n",
+    "\n",
+    "Now will determine the runtime using the Master Method:\n",
+    "\n",
+    "* $a = 2, b = 2, f(n) = 2$\n",
+    "* \n",
     "\n",
     "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The\n",
     "majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority\n",
