Added answer to 2b

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -83,7 +83,19 @@
     "\n",
     "b) Would STOOGESORT still sort correctly if we replaced k = ceiling(2n/3) with m = floor(2n/3)? If yes prove, if no give a counterexample. (Hint: what happens when n = 4?)\n",
     "\n",
+    "No, it would not still sort correctly. A good counter example would be if we passed the following array into STOOGESORT:\n",
     "\n",
+    "* $[23, 12, 5, 67]$\n",
+    "\n",
+    "Now I will step through the function with the given input to show that it would not sort correctly when using $m = floor(\\frac{2n}{3})$:\n",
+    "\n",
+    "* First we check if the length of the passed in array is of length $2$ ($n = 2$) which it is not so we go to the else if block and see that that is in fact true because $n = 4 \\gt 2$\n",
+    "* We now calculate the variable $m$ to be equal to $m = floor(\\frac{2 * 4}{3}) = 2$\n",
+    "* The first recursive call of STOOGESORT will be passed in the sub-array of $[23, 12]$ which will satisfy the $n = 2$ condition which will swap the two elements so the total array is now: $[12, 23, 5, 67]$.\n",
+    "* The second recursive call of STOOGESORT will be passed in the sub-array of $[5, 67]$ which will satisfy the $n = 2$ condition which will not do anything to the sub-array because $A[0] \\lt A[1]$.\n",
+    "* The third and final recursive call of STOOGESORT will be passed in the sub-array of $[12, 23]$ which will satisfy the $n = 2$ condition again but nothing will be done because they were sorted in the first recursive call.\n",
+    "* Therefore the resulting array at the end of all of the calls to STOOGESORT will be:\n",
+    "* $[12, 23, 5, 67]$ which is not a complete sort therefore showing if the algorithm changes to use $m = floor(\\frac{2n}{3})$ it will not correctly sort at least in the case shown above which is my counter-example.\n",
     "\n",
     "c) State a recurrence for the number of comparisons executed by STOOGESORT.\n",
     "\n",
@@ -145,10 +157,10 @@
     "* $a = 1, b = 4, f(n) = c$\n",
     "* $n^{log_{b}(a)} = n^{log_{4}(1)} = n^{0}$\n",
     "* $n^{0} = 1 = \\theta(1) = \\theta(c)$ (Therefore case 2 applies)\n",
-    "* Therefore $T(n) = \\theta(n^{log_{b}(a)} * log_2(n)) = \\theta(1 * log_2(n))$\n",
-    "* The runtime for quaternary search is $T(n) = \\theta(log_2(n))$\n",
+    "* Therefore $T(n) = \\theta(n^{log_{b}(a)} * log_4(n)) = \\theta(1 * log_4(n))$\n",
+    "* The runtime for quaternary search is $T(n) = \\theta(log_4(n))$\n",
     "\n",
-    "The worst case runtime for the quaternary search is fundamentally equivalent to the worst case runtime for binary search because the runtime of binary search is $T(n) = \\theta(log_2(n))$.\n",
+    "The worst case runtime for the quaternary search is fundamentally equivalent to the worst case runtime for binary search because the runtime of binary search is $T(n) = \\theta(log_2(n))$. And we have shown previously that the runtime of logirithms of different bases are equivalent when it comes to asymptotic analysis.\n",
     "\n",
     "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value\n",
     "in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine\n",
