--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -106,10 +106,16 @@
     "\n",
     "Based on the recurrence determined in part c we can use the Master Method to solve the recurrence:\n",
     "\n",
+    "* $a = 3, b = \\frac{3}{2}, f(n) = c$\n",
+    "* $n^{log_{b}(a)} = n^{log_{\\frac{3}{2}}(3)}$\n",
+    "* $log_{\\frac{3}{2}}(3) = \\frac{log_{10}(3)}{log_{10}(\\frac{3}{2})} \\approx 2.70$\n",
+    "* $n^{log_{\\frac{3}{2}}(3)} = n^{2.70} = \\Omega(f(n))$ Because $f(n) = c$ where $c$ is some constant\n",
+    "* Therefore it follows: $f(n) = O(n^{2.70 - \\epsilon})$ where the $\\epsilon \\approx 2.70$\n",
+    "* Therefore case 1 applies and the runtime for the recurrence is $T(n) = \\theta(n^{2.70})$\n",
+    "\n",
     "* $T(n) = 1 + 3 * T(\\frac{2n}{3})$\n",
     "* $T(n) = 1 + 3 + 9 * T(\\frac{4}{9})$\n",
     "* $1 + 3 + 9 * T(\\frac{4}{9}) = 1 + 3 + 3^{2} + ... + 3^{log_{\\frac{3}{2}}}$\n",
-    "\n",
     "\n",
     "\n",
     "3) The quaternary search algorithm is a modification of the binary search algorithm that splits the input\n",
