Slight modifications to hw 2

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -37,14 +37,14 @@
     "* $a = 2, b = 4, f(n) = n^{2}$\n",
     "* $n^{log_{b}(a)} = n^{log_{4}(2)} = n^{\\frac{1}{2}}$\n",
     "* $f(n) = O(n^{log_{4}(2) + \\epsilon}) = O(n^{\\frac{1}{2} + \\epsilon})$\n",
-    "* $\\frac{1}{2} + \\epsilon = 2$\n",
+    "* $\\frac{1}{2} + \\epsilon = 2$ (Case 3 applies)\n",
     "* $\\epsilon = 2 - \\frac{1}{2} = 1.5$\n",
     "* $a * f(\\frac{n}{b}) \\leq c * f(n)$ (Regularity condition)\n",
     "* $2 * (\\frac{n}{4})^{2} \\leq c * n^{2}$\n",
     "* $2 * \\frac{n^{2}}{16} \\leq c * n^{2}$\n",
     "* $\\frac{n^{2}}{8} \\leq c * n^{2}$\n",
-    "* $\\frac{1}{8} \\leq c$\n",
-    "* $1 \\lt c$ (Regularity condition holds)\n",
+    "* $\\frac{1}{8} \\leq c$ Therefore $c$ can be $c \\lt 1$ so the regularity condition holds\n",
+    "* $1 \\gt c$ (Regularity condition holds)\n",
     "* Therefore $T(n) = \\theta(f(n)) = \\theta(n^{2})$\n",
     "\n",
     "d) $T(n) = 9T(\\frac{n}{3}) + 6n^{2}$\n",
@@ -73,13 +73,15 @@
     "\n",
     "a) Explain why the STOOGESORT algorithm sorts its input. (This is not a formal proof)\n",
     "\n",
-    "For when $n = 2$ (base case) <code>STOOGESORT(A[0, 1])</code> while properly sort the array by swapping the two elements if the first element is greater than the second, otherwise the array will be unchanged because it is already sorted.\n",
+    "For when $n = 2$ (base case) <code>STOOGESORT(A[0, 1])</code> will properly sort the array by swapping the two elements if the first element is greater than the second, otherwise the array will be unchanged because it is already sorted.\n",
     "\n",
     "However when the length of the array is greater than 2 e.g. ($n \\geq 3$) an integer k is calculated which is the ceiling of the $\\frac{2}{3}$ of length $n$. Then there are the three recursive calls to STOOGESORT where the passed in arrays for each call are as follows:\n",
     "\n",
     "* First subarray is the first $\\frac{2}{3}$ of the total array which is then sorted in the first call\n",
     "* Second subarray is the last $\\frac{2}{3}$ of the total array which is then sorted in the second call\n",
     "* The third recursive call sorts the first $\\frac{2}{3}$ of the total array again like the first call before it.\n",
+    "\n",
+    "This algorithm sorts the total array because it passes sub-arrays that fully encompass the array that was originally passed in. The method is inefficient however because it overlaps in the sub-arrays that it sorts in the sense that there will be overlap between the first $\\frac{2}{3}$ and the second $\\frac{2}{3}$ of the array when sorting.\n",
     "\n",
     "b) Would STOOGESORT still sort correctly if we replaced k = ceiling(2n/3) with m = floor(2n/3)? If yes prove, if no give a counterexample. (Hint: what happens when n = 4?)\n",
     "\n",
@@ -108,15 +110,14 @@
     "\n",
     "* $a = 3, b = \\frac{3}{2}, f(n) = c$\n",
     "* $n^{log_{b}(a)} = n^{log_{\\frac{3}{2}}(3)}$\n",
-    "* $log_{\\frac{3}{2}}(3) = \\frac{log_{10}(3)}{log_{10}(\\frac{3}{2})} \\approx 2.70$\n",
-    "* $n^{log_{\\frac{3}{2}}(3)} = n^{2.70} = \\Omega(f(n))$ Because $f(n) = c$ where $c$ is some constant\n",
-    "* Therefore it follows: $f(n) = O(n^{2.70 - \\epsilon})$ where the $\\epsilon \\approx 2.70$\n",
-    "* Therefore case 1 applies and the runtime for the recurrence is $T(n) = \\theta(n^{2.70})$\n",
+    "* $log_{\\frac{3}{2}}(3) = \\frac{log_{10}(3)}{log_{10}(\\frac{3}{2})} \\approx 2.71$\n",
+    "* $n^{log_{\\frac{3}{2}}(3)} = n^{2.71} = \\Omega(f(n))$ Because $f(n) = c$ where $c$ is some constant\n",
+    "* Therefore it follows: $f(n) = O(n^{2.71 - \\epsilon})$ where the $\\epsilon \\approx 2.71$\n",
+    "* Therefore case 1 applies and the runtime for the recurrence is $T(n) = \\theta(n^{2.71})$\n",
     "\n",
     "* $T(n) = 1 + 3 * T(\\frac{2n}{3})$\n",
     "* $T(n) = 1 + 3 + 9 * T(\\frac{4}{9})$\n",
     "* $1 + 3 + 9 * T(\\frac{4}{9}) = 1 + 3 + 3^{2} + ... + 3^{log_{\\frac{3}{2}}}$\n",
-    "\n",
     "\n",
     "3) The quaternary search algorithm is a modification of the binary search algorithm that splits the input\n",
     "not into two sets of almost-equal sizes, but into four sets of sizes approximately one-fourth. Write pseudo-code\n",
@@ -168,10 +169,7 @@
     "\n",
     "The worst case runtime for the quaternary search is fundamentally equivalent to the worst case runtime for binary search because the runtime of binary search is $T(n) = \\theta(log_2(n))$. And we have shown previously that the runtime of logirithms of different bases are equivalent when it comes to asymptotic analysis.\n",
     "\n",
-    "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value\n",
-    "in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine\n",
-    "the asymptotic running time of the algorithm. Compare the running time of the recursive min_and_max algorithm\n",
-    "to that of an iterative algorithm for finding the minimum and maximum values of an array.\n",
+    "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine the asymptotic running time of the algorithm. Compare the running time of the recursive min_and_max algorithm to that of an iterative algorithm for finding the minimum and maximum values of an array.\n",
     "\n",
     "Pseudocode for max_min method which will return the (min, max) pair:\n",
     "\n",
@@ -218,7 +216,11 @@
     "Now will determine the runtime using the Master Method:\n",
     "\n",
     "* $a = 2, b = 2, f(n) = 2$\n",
-    "* \n",
+    "* $n^{log_{b}(a)} = n^{log_{2}(2)} = n^{1}$\n",
+    "* $f(n) = 2$ which follows that $f(n) = n^{0}$ (Therefore case one applies)\n",
+    "* $f(n) = O(n^{log_{b}(a) - \\epsilon})$ where $\\epsilon = 1$\n",
+    "* Therefore it follows $T(n) = \\theta(n^{log_{b}(a)})$\n",
+    "* $\\theta(n^{log_{2}(2)}) = \\theta(n^{1})$\n",
     "\n",
     "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The\n",
     "majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority\n",
