--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -94,10 +94,12 @@
     "* First we check if the length of the passed in array is of length $2$ ($n = 2$) which it is not so we go to the else if block and see that that is in fact true because $n = 4 \\gt 2$\n",
     "* We now calculate the variable $m$ to be equal to $m = floor(\\frac{2 * 4}{3}) = 2$\n",
     "* The first recursive call of STOOGESORT will be passed in the sub-array of $[23, 12]$ which will satisfy the $n = 2$ condition which will swap the two elements so the total array is now: $[12, 23, 5, 67]$.\n",
-    "* The second recursive call of STOOGESORT will be passed in the sub-array of $[5, 67]$ which will satisfy the $n = 2$ condition which will not do anything to the sub-array because $A[0] \\lt A[1]$.\n",
+    "* The second recursive call of STOOGESORT will be passed in the sub-array of $[5, 67]$ which will satisfy the $n = 2$ condition which will not do anything to the sub-array because $A[0] \\lt A[1]$ already.\n",
     "* The third and final recursive call of STOOGESORT will be passed in the sub-array of $[12, 23]$ which will satisfy the $n = 2$ condition again but nothing will be done because they were sorted in the first recursive call.\n",
     "* Therefore the resulting array at the end of all of the calls to STOOGESORT will be:\n",
     "* $[12, 23, 5, 67]$ which is not a complete sort therefore showing if the algorithm changes to use $m = floor(\\frac{2n}{3})$ it will not correctly sort at least in the case shown above which is my counter-example.\n",
+    "\n",
+    "By using floor when the array is of length $4$ (and possibly other lengths) The two sub-arrays do not overlap and as a result only will sort the two sub-arrays locally and not globally.\n",
     "\n",
     "c) State a recurrence for the number of comparisons executed by STOOGESORT.\n",
     "\n",
@@ -115,15 +117,7 @@
     "* Therefore it follows: $f(n) = O(n^{2.71 - \\epsilon})$ where the $\\epsilon \\approx 2.71$\n",
     "* Therefore case 1 applies and the runtime for the recurrence is $T(n) = \\theta(n^{2.71})$\n",
     "\n",
-    "* $T(n) = 1 + 3 * T(\\frac{2n}{3})$\n",
-    "* $T(n) = 1 + 3 + 9 * T(\\frac{4}{9})$\n",
-    "* $1 + 3 + 9 * T(\\frac{4}{9}) = 1 + 3 + 3^{2} + ... + 3^{log_{\\frac{3}{2}}}$\n",
-    "\n",
-    "3) The quaternary search algorithm is a modification of the binary search algorithm that splits the input\n",
-    "not into two sets of almost-equal sizes, but into four sets of sizes approximately one-fourth. Write pseudo-code\n",
-    "for the quaternary search algorithm, give the recurrence for the quaternary search algorithm and determine the\n",
-    "asymptotic complexity of the algorithm. Compare the worst-case running time of the quaternary search algorithm\n",
-    "to that of the binary search algorithm.\n",
+    "3) The quaternary search algorithm is a modification of the binary search algorithm that splits the input not into two sets of almost-equal sizes, but into four sets of sizes approximately one-fourth. Write pseudo-code for the quaternary search algorithm, give the recurrence for the quaternary search algorithm and determine the asymptotic complexity of the algorithm. Compare the worst-case running time of the quaternary search algorithm to that of the binary search algorithm.\n",
     "\n",
     "```python\n",
     "def quaternary_search(arr, el):\n",
@@ -157,7 +151,7 @@
     "\n",
     "* $T(n) = T(\\frac{n}{4}) + c$\n",
     "\n",
-    "The reason for this is because only a single recursive call is made in the worst case and the searching for the element in the list is done by looking up array entries by index which is a constant time operation ($c$). The $b$ factor is $4$ because the search sub-divides the passed in array into quarter sized sub-problems rather than the halves encountered with binary search. Based on the above recurrence we can solve it to show the runtime of quaternary search:\n",
+    "The reason for this is because only a single additional recursive call is made in the worst case and the searching for the element in the list through comparisons which is a constant time operation ($c$) where $c$ represents the number of comparisons made. The $b$ factor is $4$ because the search sub-divides the passed in array into quarter sized sub-problems rather than the halves encountered with binary search. Based on the above recurrence we can solve it to show the runtime of quaternary search:\n",
     "\n",
     "(Using the master method)\n",
     "\n",
@@ -167,7 +161,7 @@
     "* Therefore $T(n) = \\theta(n^{log_{b}(a)} * log_4(n)) = \\theta(1 * log_4(n))$\n",
     "* The runtime for quaternary search is $T(n) = \\theta(log_4(n))$\n",
     "\n",
-    "The worst case runtime for the quaternary search is fundamentally equivalent to the worst case runtime for binary search because the runtime of binary search is $T(n) = \\theta(log_2(n))$. And we have shown previously that the runtime of logirithms of different bases are equivalent when it comes to asymptotic analysis.\n",
+    "The worst case runtime for the quaternary search is fundamentally equivalent to the worst case runtime for binary search because the runtime of binary search is $T(n) = \\theta(log_2(n))$. And we have shown previously that the runtime of logirithms of different bases are equivalent when it comes to asymptotic analysis. $\\theta(log_2(n)) = \\theta(log_4(n))$\n",
     "\n",
     "4) Design and analyze a divide and conquer algorithm that determines the minimum and maximum value in an unsorted list (array). Write pseudo-code for the min_and_max algorithm, give the recurrence and determine the asymptotic running time of the algorithm. Compare the running time of the recursive min_and_max algorithm to that of an iterative algorithm for finding the minimum and maximum values of an array.\n",
     "\n",
@@ -211,7 +205,7 @@
     "\n",
     "$T(n) = 2T(n/2) + 2$\n",
     "\n",
-    "The reason being from the above pseudocode showing that there are two recursive calls of min_max where each call is passed in a respective half of the total array, which are then used to then make comparisons to each others' local mins and maxs to determine the overall (global) min and max which is returned.\n",
+    "The reason being from the above pseudocode showing that there are two recursive calls of min_max where each call is passed in a respective half of the total array, which are then used to then make two comparisons to each others' local mins and maxs to determine the overall (global) min and max which is returned.\n",
     "\n",
     "Now will determine the runtime using the Master Method:\n",
     "\n",
@@ -222,16 +216,7 @@
     "* Therefore it follows $T(n) = \\theta(n^{log_{b}(a)})$\n",
     "* $\\theta(n^{log_{2}(2)}) = \\theta(n^{1})$\n",
     "\n",
-    "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The\n",
-    "majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority\n",
-    "element will occur in at least 4 positions). Given an array, the task is to design an algorithm to determine whether\n",
-    "the array has a majority element, and, if so, to find that element. The elements of the array are not necessarily\n",
-    "from an ordered domain like the integers, so there can be no comparisons of the form “is A[i] > A[j]?”. (Think of\n",
-    "the array elements as GIF files, say.) Therefore you cannot sort the array. However you can answer questions of\n",
-    "the form: “does A[i] = A[j]?” in constant time. Give a detailed verbal description and pseudocode for a divide and\n",
-    "conquer algorithm to find a majority element in A (or determine that no majority element exists). Give a\n",
-    "recurrence for the algorithm and determine the asymptotic running time.\n",
-    "Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn).\n",
+    "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority element will occur in at least 4 positions). Given an array, the task is to design an algorithm to determine whether the array has a majority element, and, if so, to find that element. The elements of the array are not necessarily from an ordered domain like the integers, so there can be no comparisons of the form “is A[i] > A[j]?”. (Think of the array elements as GIF files, say.) Therefore you cannot sort the array. However you can answer questions of the form: “does A[i] = A[j]?” in constant time. Give a detailed verbal description and pseudocode for a divide and conquer algorithm to find a majority element in A (or determine that no majority element exists). Give a recurrence for the algorithm and determine the asymptotic running time. Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn).\n",
     "\n",
     "The algorithm starts by dividing the array in half and calling the method on each respective half. This is related to the stragedy of the merge sort algorithm. When the arrays passed in become single element those single elements will be returned as the \"majority\" of their single element arrays. The other levels will return elements as a result of the two recursive calls. The crux of the algorithm is that if there exists a majority element in the array then that element will be a majority element for either/both of the left or right sub-arrays. There are four possible outcomes from the algorithm:\n",
     "\n",
