Added iterative example to question 4

--- a/week2/CS325_Homework_Two.ipynb
+++ b/week2/CS325_Homework_Two.ipynb
@@ -28,7 +28,7 @@
     "* $a = 3, b = 1$ and because $f(n) = \\theta(n^{0}) = 1, d = 0$\n",
     "* Because $a \\gt 1$ the recurrence bound is $\\theta(n^{d} * a^{\\frac{n}{b}})$\n",
     "* $\\theta(n^{d} * a^{\\frac{n}{b}}) = \\theta(n^{0} * 3^{\\frac{n}{1}})$\n",
-    "* Therefore, $T(n)$ is $\\theta(3^{n})$\n",
+    "* Therefore, $T(n) = \\theta(3^{n})$\n",
     "\n",
     "c) $T(n) = 2T(\\frac{n}{4}) + n^{2}$\n",
     "\n",
@@ -99,7 +99,7 @@
     "* Therefore the resulting array at the end of all of the calls to STOOGESORT will be:\n",
     "* $[12, 23, 5, 67]$ which is not a complete sort therefore showing if the algorithm changes to use $m = floor(\\frac{2n}{3})$ it will not correctly sort at least in the case shown above which is my counter-example.\n",
     "\n",
-    "By using floor when the array is of length $4$ (and possibly other lengths) The two sub-arrays do not overlap and as a result only will sort the two sub-arrays locally and not globally.\n",
+    "By using floor when the array is of length $4$ (and possibly other lengths) The two sub-arrays do not overlap and as a result only will sort the two sub-arrays (first half and second half with no overlap) locally and not globally.\n",
     "\n",
     "c) State a recurrence for the number of comparisons executed by STOOGESORT.\n",
     "\n",
@@ -151,7 +151,7 @@
     "\n",
     "* $T(n) = T(\\frac{n}{4}) + c$\n",
     "\n",
-    "The reason for this is because only a single additional recursive call is made in the worst case and the searching for the element in the list through comparisons which is a constant time operation ($c$) where $c$ represents the number of comparisons made. The $b$ factor is $4$ because the search sub-divides the passed in array into quarter sized sub-problems rather than the halves encountered with binary search. Based on the above recurrence we can solve it to show the runtime of quaternary search:\n",
+    "The reason for this is because only a single recursive call is made in the worst case and the searching for the element in the list through comparisons which is a constant time operation ($c$) where $c$ represents the number of comparisons made. The $b$ factor is $4$ because the search sub-divides the passed in array into quarter sized sub-problems rather than the halves encountered with binary search. Based on the above recurrence we can solve it to show the runtime of quaternary search:\n",
     "\n",
     "(Using the master method)\n",
     "\n",
@@ -207,14 +207,47 @@
     "\n",
     "The reason being from the above pseudocode showing that there are two recursive calls of min_max where each call is passed in a respective half of the total array, which are then used to then make two comparisons to each others' local mins and maxs to determine the overall (global) min and max which is returned.\n",
     "\n",
-    "Now will determine the runtime using the Master Method:\n",
+    "Now I will determine the runtime using the Master Method:\n",
     "\n",
     "* $a = 2, b = 2, f(n) = 2$\n",
     "* $n^{log_{b}(a)} = n^{log_{2}(2)} = n^{1}$\n",
     "* $f(n) = 2$ which follows that $f(n) = n^{0}$ (Therefore case one applies)\n",
     "* $f(n) = O(n^{log_{b}(a) - \\epsilon})$ where $\\epsilon = 1$\n",
     "* Therefore it follows $T(n) = \\theta(n^{log_{b}(a)})$\n",
-    "* $\\theta(n^{log_{2}(2)}) = \\theta(n^{1})$\n",
+    "* $\\theta(n^{log_{2}(2)}) = \\theta(n^{1}) = \\theta(n)$\n",
+    "\n",
+    "An example of an iterative method to find the min and max of an array can be shown below:\n",
+    "\n",
+    "```\n",
+    "max_min(arr[0..n]) {\n",
+    "    if (n == 1) {\n",
+    "        return (arr[0], arr[0])\n",
+    "    } else if (n == 2) {\n",
+    "        if (arr[0] > arr[1]) {\n",
+    "            return (arr[0], arr[1])\n",
+    "        } else {\n",
+    "            return (arr[1], arr[0])\n",
+    "        }\n",
+    "    } else {\n",
+    "        minimum = MAX_INT\n",
+    "        maximum = MIN_INT\n",
+    "        \n",
+    "        for (i in arr) {\n",
+    "            if (i > maximum) {\n",
+    "                maximum = i\n",
+    "            }\n",
+    "            \n",
+    "            if (i < minimum) {\n",
+    "                minimum = i\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        return (minimum, maximum)\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "The iterative example has a runtime of $T(n) = \\theta(n) + 2$ because the iterative solution has to traverse the length of the passed in array and make two comparisons of the elements explored to the currently held max and min values. For values of significantly large $n$ we can take the runtime to be that of $\\theta(n)$ which is equivalent to the recursive implementation shown above.\n",
     "\n",
     "5) An array A[1 . . . n] is said to have a majority element if more than half of its entries are the same. The majority element of A is any element occurring in more than n/2 positions (so if n = 6 or n = 7, the majority element will occur in at least 4 positions). Given an array, the task is to design an algorithm to determine whether the array has a majority element, and, if so, to find that element. The elements of the array are not necessarily from an ordered domain like the integers, so there can be no comparisons of the form “is A[i] > A[j]?”. (Think of the array elements as GIF files, say.) Therefore you cannot sort the array. However you can answer questions of the form: “does A[i] = A[j]?” in constant time. Give a detailed verbal description and pseudocode for a divide and conquer algorithm to find a majority element in A (or determine that no majority element exists). Give a recurrence for the algorithm and determine the asymptotic running time. Note: A O(n) algorithm exists but your algorithm only needs to be O(nlgn).\n",
     "\n",
